[package]
name = "glua"
version = "0.1.0"
authors = ["J0sh0nat0r <jojo.parillon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19"
regex = "1"