[package]
name = "glua"
version = "0.1.0"
authors = ["J0sh0nat0r <jojo.parillon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.14.0", features = ["collections"] }
byteyarn = "0.3.0"
logos = "0.13.0"
memchr = "2.6.3"
stacker = "0.1.15"
thiserror = "1.0.48"

[dev-dependencies]
criterion = "0.5.1"
pretty-bytes = "0.2.2"

[profile.release]
debug = true

[[bench]]
name = "bench_main"
harness = false
